--- a/web/templates/eat.html.twig
+++ b/web/templates/eat.html.twig
@@ -6,5 +6,5 @@ Fressende Pandas
 
 
 {% block introdescription %}
-Pandas essen Bambus
+Eigentlich ernähren sich Pandas nur von einer bestimmter Nahrung: Bambus! Aber das nicht zu knapp!
 {% endblock %}
