--- a/web/templates/foul.html.twig
+++ b/web/templates/foul.html.twig
@@ -6,5 +6,5 @@ Faule Pandas
 
 
 {% block introdescription %}
-Pandas schlafen den größten Teil des Tages
+Pandas schlafen den größten Teil des Tages, meist, nachdem sie sich am Bambus sattgegessen haben.
 {% endblock %}
