change sidebar teaser

--- a/web/templates/includes/header.html.twig
+++ b/web/templates/includes/header.html.twig
@@ -1,5 +1,5 @@
 <div class="header">
-    <a href="../templates/homepage.html" title="Pandademo-Die Krone der Schöpfung">
+    <a href="/" title="Pandademo - Die Krone der Schöpfung">
         <img class="header__logo" src="../img/poldi.png"/>
     </a>
     <div class="header__title-wrapper">
