--- a/web/templates/includes/main-navigation.html.twig
+++ b/web/templates/includes/main-navigation.html.twig
@@ -18,7 +18,8 @@
             </ul>
         </li>
         <li class="main-navigation__item">
-            <a class="main-navigation__link" href="https://www.youtube.com/results?search_query=pandas" title="Zu den Pandavideos">Pandavideos</a>
+            <a class="main-navigation__link" href="https://www.youtube.com/results?search_query=pandas"
+               title="Zu den Pandavideos">Pandavideos</a>
         </li>
         <li class="main-navigation__item">
             <a class="main-navigation__link" href="https://giphy.com/search/panda"
