--- a/web/templates/includes/sidebar-teaser.html.twig
+++ b/web/templates/includes/sidebar-teaser.html.twig
@@ -1,12 +1,12 @@
 <div class="teaser-sidebar__single">
-                            <a class="teaser-sidebar__image" href="/" title="Hallo">
-                                <img src="../img/panda.jpg"/>
-                            </a>
-                            <div class="teaser-sidebar__content">
-                                <div class="teaser-sidebar__title">
-                                    <a href="/" title="Hallo">
-                                        Süßer Panda
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
+    <a class="teaser-sidebar__image" href="/" title="Hallo">
+        <img src="../img/{{ teaser.file }}"/>
+    </a>
+    <div class="teaser-sidebar__content">
+        <div class="teaser-sidebar__title">
+            <a href="/" title="{{ teaser.title }}">
+                {{ teaser.title }}
+            </a>
+        </div>
+    </div>
+</div>
