--- a/web/templates/includes/header.html.twig
+++ b/web/templates/includes/header.html.twig
@@ -10,6 +10,6 @@
     </div>
     <div id="mobile-menu-button" class="header__mobile-menu-button"></div>
 
-    {% include '/main-navigation.html.twig' %}
+    {% include 'include/main-navigation.html.twig' %}
 
 </div>
