--- a/web/styles/sass/content/_header.scss
+++ b/web/styles/sass/content/_header.scss
@@ -37,12 +37,14 @@
         color: $black;
         font-family: $font-family-special;
         font-size: 6rem;
+        line-height: 6rem;
         display: inline-block;
         float: none;
         margin: 0;
 
         @media screen and (max-width: $break-max-medium) {
             font-size: $font-extra-large;
+            line-height: 1.5rem;
             margin-top: 7px;
         }
     }
