--- a/web/templates/master.html.twig
+++ b/web/templates/master.html.twig
@@ -18,10 +18,10 @@
 
 <div class="site">
     <div class="main-container">
- 
+
 {% include 'includes/header.html.twig' %}
 {% include 'includes/mobile-menu.html.twig' %}
-  
+
         <div class="content">
             <div class="header-image">
                 <img src="../img/panda.jpg" title="Hallo"/>
@@ -43,7 +43,7 @@
 
             <article class="main-content">
                 <div class="teaser">
-                    <div class="teaser-sidebar__headline">
+                    <div class="teaser__headline">
                         Eine Übersicht
                     </div>
                     <div class="teaser__list">
@@ -52,7 +52,6 @@
                        {% include 'includes/teaser.html.twig' %}
                     {% endfor %}
 
-                 
                     </div>
                 </div>
             </article>
