--- a/web/templates/master.html.twig
+++ b/web/templates/master.html.twig
@@ -24,7 +24,7 @@
 
         <div class="content">
             <div class="header-image">
-                <img src="../img/panda.jpg" title="Hallo"/>
+                <img src="../img/bamboobanner.jpg"/>
             </div>
 
             <section class="introduction">
