--- a/web/styles/css/main.css
+++ b/web/styles/css/main.css
@@ -626,7 +626,7 @@ a {
     bottom: 3px; }
   .main-navigation__item {
     float: left;
-    padding: 0 10px 0 0;
+    padding: 0 0 10px 0;
     margin-right: 30px;
     font-weight: bold; }
     .main-navigation__item::before {
