--- a/web/styles/sass/content/_main-navigation.scss
+++ b/web/styles/sass/content/_main-navigation.scss
@@ -29,7 +29,7 @@
 
     &__item {
         float: left;
-        padding: 0 10px 0 0;
+        padding: 0 0 10px 0;
         margin-right: 30px;
         font-weight: bold;
 
