--- a/web/templates/includes/mobile-menu.html.twig
+++ b/web/templates/includes/mobile-menu.html.twig
@@ -3,6 +3,20 @@
     <ul class="mobile-menu__list">
         <li class="mobile-menu__item mobile-menu__item--active">
             <a class="mobile-menu__link" href="/" title="Hallo">Pandabilder</a>
+            <ul class="mobile-menu__sub-menu">
+                <li class="mobile-menu__sub-item">
+                    <a class="mobile-menu__sub-link" href="/fressende-pandas"
+                       title="Zu den fressenden Pandas">Fressende Pandas</a>
+                </li>
+                <li class="mobile-menu__sub-item">
+                    <a class="mobile-menu__sub-link" href="/spielende-pandas"
+                       title="Zu den spielenden Pandas">Spielende Pandas</a>
+                </li>
+                <li class="mobile-menu__sub-item">
+                    <a class="mobile-menu__sub-link" href="/faule-pandas"
+                       title="Zu den faulen Pandas">Faule Pandas</a>
+                </li>
+            </ul>
         </li>
         <li class="mobile-menu__item">
             <a class="mobile-menu__link" href="/" title="Hallo">Pandavideos</a>
