--- a/web/styles/sass/content/_mobile-menu.scss
+++ b/web/styles/sass/content/_mobile-menu.scss
@@ -58,6 +58,51 @@
         }
     }
 
+    /* Submenu */
+    &__sub-menu {
+        position: absolute;
+        margin-top: 3px;
+        z-index: $z-high + 1;
+        list-style: none;
+        background-color: $white;
+        text-align: left;
+        padding: 10px;
+    }
+
+    &__sub-item {
+        color: $black;
+        font-size: $font-large;
+        line-height: 2rem;
+        border-bottom: 0.5px solid $grey-light;
+
+        &::before {
+            display: none;
+        }
+
+        &:last-child {
+            margin-bottom: -5px;
+            border: none;
+        }
+
+        > a {
+            color: $green;
+        }
+
+        a:hover {
+            text-decoration: none;
+            color: $orange;
+        }
+    }
+
+    &__sub-link {
+        display: block;
+        color: $black;
+
+        &--active {
+            color: $orange;
+        }
+    }
+
     &--show {
         display: block;
     }
