--- a/web/styles/sass/content/_mobile-menu.scss
+++ b/web/styles/sass/content/_mobile-menu.scss
@@ -60,13 +60,12 @@
 
     /* Submenu */
     &__sub-menu {
-        position: absolute;
         margin-top: 3px;
-        z-index: $z-high + 1;
         list-style: none;
         background-color: $white;
         text-align: left;
-        padding: 10px;
+        padding: 10px 10px 10px 30px;
+        width: 50vw;
     }
 
     &__sub-item {
