change title tags

--- a/web/templates/includes/main-navigation.html.twig
+++ b/web/templates/includes/main-navigation.html.twig
@@ -20,14 +20,14 @@
         </li>
         <li class="main-navigation__item">
             <a class="main-navigation__link" href="https://www.youtube.com/results?search_query=pandas"
-               title="Zu den Pandavideos">Pandavideos</a>
+               title="Zu Youtube">Pandavideos</a>
         </li>
         <li class="main-navigation__item">
             <a class="main-navigation__link" href="https://giphy.com/search/panda"
-               title="Zu der Pandagalerie">Pandagalerie</a>
+               title="Zu Giphy">Pandagalerie</a>
         </li>
         <li class="main-navigation__item">
-            <a class="main-navigation__link" href="https://www.google.de/search?q=panda" title="Zu Panda & Mehr">Panda
+            <a class="main-navigation__link" href="https://www.google.de/search?q=panda" title="Zu Google">Panda
                 & Mehr</a>
         </li>
     </ul>
