--- a/web/templates/includes/mobile-menu.html.twig
+++ b/web/templates/includes/mobile-menu.html.twig
@@ -2,7 +2,7 @@
 <nav id="mobile-menu" class="mobile-menu">
     <ul class="mobile-menu__list">
         <li class="mobile-menu__item mobile-menu__item--active">
-            <a class="mobile-menu__link" href="/" title="Hallo">Pandabilder</a>
+            <a class="mobile-menu__link" href="/" title="Zu den Pandabildern">Pandabilder</a>
             <ul class="mobile-menu__sub-menu">
                 <li class="mobile-menu__sub-item">
                     <a class="mobile-menu__sub-link" href="/fressende-pandas"
@@ -19,13 +19,13 @@
             </ul>
         </li>
         <li class="mobile-menu__item">
-            <a class="mobile-menu__link" href="/" title="Hallo">Pandavideos</a>
+            <a class="mobile-menu__link" href="https://www.youtube.com/results?search_query=pandas" title="Zu Youtube">Pandavideos</a>
         </li>
         <li class="mobile-menu__item">
-            <a class="mobile-menu__link" href="/" title="Hallo">Pandagalerie</a>
+            <a class="mobile-menu__link" href="https://giphy.com/search/panda" title="Zu Giphy">Pandagalerie</a>
         </li>
         <li class="mobile-menu__item">
-            <a class="mobile-menu__link" href="/" title="Hallo">Panda & Mehr</a>
+            <a class="mobile-menu__link" href="https://www.google.de/search?q=panda" title="Zu Google">Panda & Mehr</a>
         </li>
     </ul>
 </nav>
