--- a/web/templates/includes/sidebar-teaser.html.twig
+++ b/web/templates/includes/sidebar-teaser.html.twig
@@ -1,6 +1,6 @@
 
 <div class="teaser-sidebar__single">
-    <a class="teaser-sidebar__image" href="/" title="Hallo">
+    <a class="teaser-sidebar__image" href="/" title="{{ teaser.title }}">
         <img src="../img/{{ teaser.file }}"/>
     </a>
     <div class="teaser-sidebar__content">
